# effector-template

./: CHANGELOG.md  Cargo.toml  README.md  build.sh  test.sh
.github/release-please/: config.json
.github/workflows/: release.yml  tests.yml  unit-tests.yml
cid/: Cargo.toml  built.rs
effector/: Cargo.toml  module.yaml
effector/src/: import.rs  main.rs
effector/test_artifacts/: Config.toml
imports/: Cargo.toml
imports/src/: lib.rs
types/: Cargo.toml
types/src/: lib.rs
